# phd_consensus

./: .dockerignore  .pdm-python  README.md  docker-compose.yaml  docker-compose.yml  docker-compose_example.yaml  dockerfile  make_compose_file.py  pyproject.toml
graphs/: OLD_results_rsi.py  benchmark.py  results_failures.py  results_mad.py  results_memory.py  results_rmse.py  results_rsi.py  results_runtime.py  results_tsi.py  stats.py  tps_graphs.py
graphs/latency/: avg.txt  max.txt  min.txt
graphs/rsi-ema/: avg.txt  bench.txt  max.txt  min.txt  sent_metadata.txt  sent_recv_deliv.txt
graphs/rsi-kalman-zlema/: avg.txt  bench.txt  max.txt  min.txt  sent_metadata.txt  sent_recv_deliv.txt
graphs/rsi-kama/: avg.txt  bench.txt  max.txt  min.txt  sent_metadata.txt  sent_recv_deliv.txt
graphs/rsi-savgol/: avg.txt  bench.txt  max.txt  min.txt  sent_metadata.txt  sent_recv_deliv.txt
graphs/rsi-sma/: avg.txt  bench.txt  max.txt  min.txt  sent_metadata.txt  sent_recv_deliv.txt
graphs/tps/: delivered_with_batch_size.txt  smooth_latency.txt
graphs/tsi-ema/: avg.txt  bench.txt  max.txt  min.txt  sent_metadata.txt  sent_recv_deliv.txt
graphs/tsi-kalman-zlema/: avg.txt  bench.txt  max.txt  min.txt  sent_metadata.txt  sent_recv_deliv.txt
graphs/tsi-kama/: avg.txt  bench.txt  max.txt  min.txt  sent_metadata.txt  sent_recv_deliv.txt
moving_average_benchmark/: benchmark.py
speed_test/: latency.txt  logging_server.py  tps_graphs.py
src/: crdt_test.py  ecc_test.py  logs.py  main.py  stats.py  test.py
tests/: example_test.py  test_rep_router.py  test_sockets.py
(+31 files in other folders)
