[project]
name = ""
version = ""
description = ""
authors = [
    {name = "brite3000", email = "zac@auhl.dev"},
]
dependencies = [
    "attrs>=23.1.0",
    "pytest>=7.4.3",
    "aiozmq>=1.0.0",
    "async-timeout>=4.0.3",
    "pyzmq>=25.1.1",
    "uvloop>=0.19.0",
    "pytest-asyncio>=0.21.1",
    "py-ecc>=7.0.0",
    "fastecdsa>=2.3.0",
    "merkly>=0.8.1",
    "python-json-logger>=2.0.7",
    "colorlog>=6.8.0",
    "apscheduler>=3.10.4",
    "talipp>=2.0.0",
    "matplotlib>=3.8.2",
    "scipy>=1.12.0",
    "filterpy>=1.4.5",
    "python3-crdt>=1.0.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

